Create password reset feature

--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -139,7 +139,7 @@
         {% else %}
         <h2 class="welcome">Hey, learner!</h2>
         {% endif %}
-        <h2>What do you want to learn today?</h2>
+        <h2>What do you want to learn?</h2>
         </div>
 
         <form method="POST" enctype="multipart/form-data" id="quizForm">
@@ -153,17 +153,11 @@
                         <p class="card-title" style="color: rgb(212, 212, 212);">
                             {# Fixed icons based on position #}
                             {% if forloop.counter0 == 0 %}
-                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#13e18f" class="bi bi-book" viewBox="0 0 16 16">
-                                <path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783"/>
-                            </svg>
+                            <font style="font-size: large;">📖</font>
                             {% elif forloop.counter0 == 1 %}
-                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#fadb6e" class="bi bi-lightbulb" viewBox="0 0 16 16">
-                                <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13a.5.5 0 0 1 0 1 .5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1 0-1 .5.5 0 0 1 0-1 .5.5 0 0 1-.46-.302l-.761-1.77a2 2 0 0 0-.453-.618A5.98 5.98 0 0 1 2 6m6-5a5 5 0 0 0-3.479 8.592c.263.254.514.564.676.941L5.83 12h4.342l.632-1.467c.162-.377.413-.687.676-.941A5 5 0 0 0 8 1"/>
-                              </svg>
+                            <font style="font-size: large;">💡</font>
                             {% else %}
-                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#9770fa" class="bi bi-stars" viewBox="0 0 16 16">
-                                <path d="M7.657 6.247c.11-.33.576-.33.686 0l.645 1.937a2.89 2.89 0 0 0 1.829 1.828l1.936.645c.33.11.33.576 0 .686l-1.937.645a2.89 2.89 0 0 0-1.828 1.829l-.645 1.936a.361.361 0 0 1-.686 0l-.645-1.937a2.89 2.89 0 0 0-1.828-1.828l-1.937-.645a.361.361 0 0 1 0-.686l1.937-.645a2.89 2.89 0 0 0 1.828-1.828zM3.794 1.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387A1.73 1.73 0 0 0 4.593 5.69l-.387 1.162a.217.217 0 0 1-.412 0L3.407 5.69A1.73 1.73 0 0 0 2.31 4.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387A1.73 1.73 0 0 0 3.407 2.31zM10.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.16 1.16 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.16 1.16 0 0 0-.732-.732L9.1 2.137a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732z"/>
-                            </svg>
+                            <font style="font-size: large;">✨</font>
                             {% endif %}
                             {{ suggestion.topic }}
                         </p>
@@ -198,7 +192,7 @@
                     <div class="radio-card card" onclick="selectCard(this, 'easy')">
                         <div class="card-body">
                             <div class="d-flex">
-                                <input type="radio" name="question_difficulty" value="easy" class="me-2">
+                                <input type="radio" name="question_difficulty" value="easy">
                                 <div>
                                     <h5 class="card-title mb-1">Easy</h5>
                                     <p class="card-text text-muted small">Basic concepts and straightforward questions
@@ -211,7 +205,7 @@
                     <div class="radio-card card" onclick="selectCard(this, 'average')">
                         <div class="card-body">
                             <div class="d-flex">
-                                <input type="radio" name="question_difficulty" value="average" class="me-2">
+                                <input type="radio" name="question_difficulty" value="average">
                                 <div>
                                     <h5 class="card-title mb-1">Average</h5>
                                     <p class="card-text text-muted small">Moderate complexity and some challenges</p>
@@ -223,7 +217,7 @@
                     <div class="radio-card card" onclick="selectCard(this, 'hard')">
                         <div class="card-body">
                             <div class="d-flex">
-                                <input type="radio" name="question_difficulty" value="hard" class="me-2">
+                                <input type="radio" name="question_difficulty" value="hard">
                                 <div>
                                     <h5 class="card-title mb-1">Hard</h5>
                                     <p class="card-text text-muted small">Advanced concepts and complex problems</p>
@@ -239,7 +233,7 @@
                     <div class="radio-card card" onclick="selectCard(this, 'casual')">
                         <div class="card-body">
                             <div class="d-flex">
-                                <input type="radio" name="tone" value="casual" class="me-2">
+                                <input type="radio" name="tone" value="casual">
                                 <div>
                                     <h5 class="card-title mb-1">Casual</h5>
                                     <p class="card-text text-muted small">Friendly and conversational style</p>
@@ -251,7 +245,7 @@
                     <div class="radio-card card" onclick="selectCard(this, 'professional')">
                         <div class="card-body">
                             <div class="d-flex">
-                                <input type="radio" name="tone" value="professional" class="me-2">
+                                <input type="radio" name="tone" value="professional">
                                 <div>
                                     <h5 class="card-title mb-1">Professional</h5>
                                     <p class="card-text text-muted small">Clear and business-like approach</p>
@@ -263,7 +257,7 @@
                     <div class="radio-card card" onclick="selectCard(this, 'academic')">
                         <div class="card-body">
                             <div class="d-flex">
-                                <input type="radio" name="tone" value="academic" class="me-2">
+                                <input type="radio" name="tone" value="academic">
                                 <div>
                                     <h5 class="card-title mb-1"> Academic</h5>
                                     <p class="card-text text-muted small">Formal and scholarly presentation</p>
