--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -48,6 +48,7 @@
 
         <div class="flex-wrapper mt-4" style="display: flex;">
             <button type="submit" class="btn btn-success rounded-pill ms-2" form="updateAccountForm">Update</button>
+            <a href="{% url 'password_change' %}" class="btn btn-outline-secondary rounded-pill ms-2">Change Password</a>
             <button class="btn btn-outline-danger rounded-pill btn-sm ms-auto me-2" data-bs-toggle="modal" data-bs-target="#deleteAccountModal">Delete Account</button>
         </div>
 
