--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -6,7 +6,7 @@
 
 <div>
 	<div class="card pt-4 pb-5 px-5 mt-2 bg-card-primary">
-		<h2 style="text-align: center; color: whitesmoke;">log in</h2>
+		<h2 style="text-align: center; color: whitesmoke;">login</h2>
 		<br>
 
 		<form method="POST" action="{% url 'login' %}">
@@ -15,12 +15,14 @@
 				<input type="email" class="form-control rounded-pill" id="emailLoginInput" aria-describedby="emailHelp"
 					placeholder="Email" name="useremail" required>
 			</div>
-			<div class="mb-5 rounded-pill">
+			<div class="mb-4 rounded-pill">
 				<input type="password" class="form-control rounded-pill" placeholder="Password" name="password"
 					required>
 			</div>
 
-			<button type="submit" class="btn w-100 btn-success rounded-pill">Login</button>
+			<p class="text-muted small mb-4"><a href="{% url 'password_reset' %}" class="text-muted">Forgot your password?</a></p>
+
+			<button type="submit" class="btn w-100 btn-success rounded-pill">Sign in</button>
 		</form>
 	</div>
 
@@ -34,7 +36,7 @@
 			data-text="signin_with" data-size="large" data-logo_alignment="center" data-width="400">
 		</div>
 
-		<button id="custom-google-btn" class="btn rounded-pill btn-outline-success" style="color: whitesmoke;"><svg
+		<button id="custom-google-btn" class="btn rounded-pill btn-success" style="color: whitesmoke;"><svg
 				xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-google"
 				viewBox="0 0 18 18">
 				<path
