Change profile icon

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -90,7 +90,7 @@
                             <a class="nav-link mt-0 mb-1 ms-0 me-5 pt-2 pb-2 ps-2 pe-2" href="{% url 'friends' %}"><font style="font-size: x-large;" class="me-2">🫂</font>Friends</a>
                         </li>
                         <li class="nav-item pt-1 pb-1 me-auto ms-2">
-                            <a class="nav-link mt-0 mb-1 ms-0 me-5 pt-2 pb-2 ps-2 pe-2" href="{% url 'profile' %}"><font style="font-size: x-large;" class="me-2">😄</font>Profile</a>
+                            <a class="nav-link mt-0 mb-1 ms-0 me-5 pt-2 pb-2 ps-2 pe-2" href="{% url 'profile' %}"><font style="font-size: x-large;" class="me-2">😊</font>Profile</a>
                         </li>
                         <li class="nav-item pt-1 pb-1 me-auto ms-2">
                             <a class="nav-link mt-0 mb-1 ms-0 me-5 pt-2 pb-2 ps-2 pe-2" href="{% url 'logout' %}"><font style="font-size: x-large;" class="me-2">🚪</font>Log out</a>
