--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -125,7 +125,7 @@
             <div class="spinner-border text-info" style="width: 3rem; height: 3rem;" role="status">
                 <span class="visually-hidden">Loading...</span>
             </div>
-            <div class="spinner-text">Generating your quiz... 😊</div>
+            <div class="spinner-text">Generating your quiz! 🚀</div>
         </div>
     </div>
 
