Update multiple templates

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -20,6 +20,10 @@
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 
+    body {
+        background-color: rgb(33, 39, 39);
+    }
+
         
     p {
         color: whitesmoke;
