--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -80,8 +80,7 @@
 
 
                         <div class="col text-center">
-                            <h1 style="text-align: center; margin-top: 100px; color: whitesmoke;">Have fun and learn from testing your
-                                knowledge on anything!</h1>
+                            <h1 style="text-align: center; margin-top: 120px; color: whitesmoke;">Create interactive quizzes about any topic in seconds with AI!</h1>
                             <a href="{% url 'signup' %}"
                                 style="background-color:rgb(36, 164, 111); color: whitesmoke; text-decoration: none; font-weight: 500;"
                                 class="btn w-50 mb-2 rounded-pill mt-5 btn-lg">Get Started
@@ -94,27 +93,32 @@
                 </div>
                 <div class="row mb-5 mt-5 ms-5" id="features">
                     <div class="col text-center">
-                        <h1 style="text-align: center; margin-top: 190px;">Let <font style="color: rgb(2, 202, 202);">
-                                AI generate quizzes</font> about any topic or
-                            subject on the fly</h1>
+                        <h2 style="text-align: center; margin-top: 12rem;">Learn more through testing your knowledge about anything</h2>
                     </div>
 
                     <div class="col">
-                        <h3 class="text-left mb-3 text-muted" style=" margin-left: 4rem; margin-top: 60px;">newton's laws
-                            of motion</h3>
                         <img src="{% static 'media/quiz-screenshot.png' %}" alt="Quiz example"
-                            style="width: 463px; height: 347px; border-radius: 5%; margin-left: 4rem;">
+                            style="width: 490px; height: 425px; border-radius: 5%; margin-left: 4rem; margin-top: 3rem;">
                     </div>
                 </div>
                 <div class="row mb-5 mt-5">
-                    <div class="col"><img src="{% static 'media/files-and-web-search.png' %}" alt="Homepage image"
-                            style="width: 463px; height: 347px; margin-left: 7rem;">
+                    <div class="col"><img src="{% static 'media/quiz-options.png' %}" alt="Homepage image"
+                            style="width: 484px; height: 378px; margin-left: 7rem;">
                     </div>
 
                     <div class="col text-center me-5">
-                        <h1 style="text-align: center; margin-top: 100px;">Automated web search and uploaded files for
-                            <font style="color: rgb(2, 202, 202);">personalized learning</font>
-                        </h1>
+                        <h2 style="text-align: center; margin-top: 9rem;">Customizable quizzes and uploaded files for personalized learning
+                        </h2>
+                    </div>
+                </div>
+                <div class="row mb-5 mt-5 ms-5" id="features">
+                    <div class="col text-center">
+                        <h2 style="text-align: center; margin-top: 10rem;">Share quizzes with your friends to spread insights</h2>
+                    </div>
+
+                    <div class="col">
+                        <img src="{% static 'media/quizzes-srceenshot.png' %}" alt="Quizzes example"
+                            style="width: 494px; height: 380px; border-radius: 5%; margin-left: 4rem;">
                     </div>
                 </div>
 
