--- a/app/templates/quiz.html
+++ b/app/templates/quiz.html
@@ -23,7 +23,7 @@
     }
 
     body {
-        background-image: linear-gradient(rgb(38, 41, 41), rgb(39, 50, 50));
+        background-color: rgb(33, 39, 39);
         background-attachment: fixed;
         margin: 0;
         padding: 0;
