--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -19,6 +19,9 @@
 
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+    body {
+        background-color: rgb(33, 39, 39);
+    }
     
     p {
         color: whitesmoke;
